# ibimina-backup

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .gitignore  .gitleaks.toml  .prettierignore  .prettierrc.json  .replit  AI_FEATURES_IMPLEMENTATION_PLAN.md  ANDROID_BUILD_SUCCESS.md  ANDROID_TESTING_GUIDE.md  APPS_READY_FOR_STORES.md  APPS_SETUP_GUIDE.md  APP_INTERLINKING.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_DOCS_INDEX.md  ARCHITECTURE_REVIEW.md  ARTIFACTS_INVENTORY.md  ATLAS_DESIGN_AUDIT.md  AUTHENTICATION_README.md  App.tsx  AuditReport.md  BUILD_ANDROID.md  BUILD_INSTRUCTIONS_FINAL.md  CHANGELOG.md  CLEANUP_EXECUTION_LOG.md  CLEANUP_SUCCESS_REPORT.md  CLOUDFLARE_DEPLOYMENT_CHECKLIST.md  CLOUDFLARE_DEPLOYMENT_INDEX.md  CLOUDFLARE_DEPLOYMENT_INSTRUCTIONS.md  CLOUDFLARE_DEPLOYMENT_README.md  CLOUDFLARE_VISUAL_OVERVIEW.md  CLOUDFLARE_WORKFLOW_SETUP.md  CODEBASE_ANALYSIS.md  CODEBASE_SCAN_REPORT.md  CODE_FIXES_SUMMARY.md  CODE_REVIEW_REPORT.md  COMPLETE_SYSTEM_STATUS_FINAL.md.old  (+137 more)
.githooks/: pre-commit
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.husky/: commit-msg  pre-commit  pre-push
.semgrep/: semgrep.yml
apps/desktop/staff-admin/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/staff-admin/src-tauri/capabilities/: default.json
apps/desktop/staff-admin/src-tauri/icons/: .gitkeep
apps/desktop/staff-admin/src-tauri/src/: lib.rs  main-old.rs  main.rs  tray.rs
apps/desktop/staff-admin/src-tauri/src/commands/: auth.rs  crypto.rs  hardware.rs  mod.rs  print.rs  updates.rs
(+1881 files in other folders)
